<resources>
    <string name="app_name">Chat Aplication</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="BUTTON_TEXT_LOGOUT">Log Out</string>
    <string name="EDITTEXT_HINT_USERNAME">Username</string>
    <string name="EDITTEXT_HINT_PASSWORD">Password</string>
    <string name="EDITTEXT_HINT_FIRST_NAME">First name</string>
    <string name="EDITTEXT_HINT_LAST_NAME">Last name</string>
    <string name="EDITTEXT_HINT_EMAIL">example@gmail.com</string>
    <string name="TEXTVIEW_TEXT_GENDER">gender</string>
    <string name="CHECKBOX_TEXT_NOTIFICATIONS">Accept Notifications</string>
    <string name="BUTTON_TEXT_REGISTER">Register</string>
    <string name="TEXTVIEW_TEXT_BIRTHDATE">Birth Date</string>
    <string name="EDITTEXT_TEXT_MESSAGE">Message text</string>
    <string name="BUTTON_TEXT_SEND">Send</string>
    <string name="BUTTON_TEXT_LOGIN">Login</string>

    <string name="BUTTON_LOG_TAG">Button</string>
    <string name="EDITTEXT_LOG_TAG">EditText</string>
    <string name="CONTACT_LOG_TAG">Contact</string>
    <string name="SENT_LOG_MESSAGE">Message is Sent!</string>
    <string name="WRONT_IDENTIFICATION_TOAST">Username and/or Password are wrong! (Username is not in Database)</string>
    <string name="CONTACT_LOG_MESSAGE">Contact was pressed!</string>
    <string name="LOGOUT_BUTTON_LOG_MESSAGE">Logout button pressed!</string>
    <string name="LOGIN_BUTTON_LOG_MESSAGE">Login button pressed!</string>
    <string name="BUTTON_LOG_MESSAGE">Register button pressed!</string>
    <string name="EDITTEXT_LOG_USERNAME_MESSAGE">Username = </string>
    <string name="EDITTEXT_LOG_PASSWORD_MESSAGE">Password = </string>
    <string name="TEXTVIEW_CONTACTS_LIST_NAME">My Chat List</string>
    <string name="BUNDLE_CONTACT_NAME">NAME</string>
    <string name="BUNDLE_RECEIVER_ID">RID</string>
    <string name="BUNDLE_SENDER_ID">SID</string>

    <string name="DATABASE_NAME">contacts.db</string>
    <integer name="DATABASE_VERSION">1</integer>
    <string name="TABLE_NAME">contact</string>
    <string name="MESSAGE_TABLE_NAME">message</string>
    <string name="COLUMN_CONTACT_ID">Contact_id</string>
    <string name="COLUMN_MESSAGE_ID">Message_id</string>
    <string name="COLUMN_SENDER_ID">Sender_id</string>
    <string name="COLUMN_RECEIVER_ID">Receiver_id</string>
    <string name="COLUMN_MESSAGE">Message</string>
    <string name="COLUMN_USERNAME">Username</string>
    <string name="COLUMN_FIRSTNAME">Firstname</string>
    <string name="COLUMN_LASTNAME">Lastname</string>
    <string name="SERVER_ENCRYPTION_KEY">This is the key</string>

    <string name="BASE_URL">http://18.205.194.168:80</string>
    <string name="REGISTER_EXTENSION">/register</string>
    <string name="LOGIN_EXTENSION">/login</string>
    <string name="CONTACTS_EXTENSION">/contacts</string>
    <string name="MESSAGE_EXTENSION">/message</string>

    <string-array name="dummyMessages">
        <item>Message 1</item>
        <item>Message 2</item>
        <item>Message 3</item>
        <item>Message 4</item>
        <item>Message 5</item>
        <item>Message 6</item>
        <item>Message 7</item>
    </string-array>

</resources>
