<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingLeft="@dimen/registerActBorder"
    android:paddingRight="@dimen/registerActBorder"
    android:paddingTop="@dimen/registerActBorder"
    tools:context="markovic.milorad.chataplication.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/registerActLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/registerActBorder"
            android:weightSum="2">

            <EditText
                android:id="@+id/registerActEditUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/registerActEditTextPadding"
                android:layout_weight="1"
                android:hint="@string/EDITTEXT_HINT_USERNAME"
                android:maxLines="1"
                android:selectAllOnFocus="true" />


            <EditText
                android:id="@+id/registerActEditFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/registerActEditTextPadding"
                android:layout_weight="1"
                android:hint="@string/EDITTEXT_HINT_FIRST_NAME"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerActLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerActLayout1"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/registerActEditPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/registerActEditTextPadding"
                android:layout_weight="1"
                android:hint="@string/EDITTEXT_HINT_PASSWORD"
                android:inputType="textPassword"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/registerActEditLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/registerActEditTextPadding"
                android:layout_weight="1"
                android:hint="@string/EDITTEXT_HINT_LAST_NAME"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerActLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerActLayout2"
            android:paddingBottom="@dimen/registerActEditTextPadding"
            android:weightSum="4">

            <EditText
                android:id="@+id/registerActEditEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/EDITTEXT_HINT_EMAIL"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/TEXTVIEW_TEXT_GENDER" />

            <Spinner
                android:id="@+id/registerActSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center"
                android:textAlignment="textEnd"></Spinner>
        </LinearLayout>

        <CheckBox
            android:id="@+id/registerActCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerActLayout3"
            android:text="@string/CHECKBOX_TEXT_NOTIFICATIONS" />

        <Button
            android:id="@+id/registerActButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:text="@string/BUTTON_TEXT_REGISTER" />

        <TextView
            android:id="@+id/registerActTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerActCheckbox"
            android:text="@string/TEXTVIEW_TEXT_BIRTHDATE" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/registerActButtonRegister"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/registerActTextView"
            android:layout_marginLeft="@dimen/registerActDatePickermargin">


            <DatePicker
                android:id="@+id/registerActDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"></DatePicker>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
